# property-scraper

./: .gitignore  Makefile  README.md  pyproject.toml
src/: condense.py  lib.py  transactions.py
